<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/log1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerSub"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Subject" />

            <Spinner
                android:id="@+id/spinnerClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:entries="@array/Class" />
        </LinearLayout>

        <EditText
        android:id="@+id/day"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_edittext"
        android:drawableRight="@drawable/ic_today"
        android:ems="10"
        android:hint="Selete the Date"
        android:inputType="date" />

    <EditText
        android:id="@+id/examName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_edittext"
        android:drawableRight="@drawable/ic_assignment"

        android:hint="@string/please_enter_the_name" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addexam"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Add" />

            <Button
                android:id="@+id/cancelexam"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"

                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Cancel" />
        </LinearLayout>


</LinearLayout>

</android.support.constraint.ConstraintLayout>

