...
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/homedate1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
...
                    android:button="@null"
                    android:gravity="center"
                    android:text="Open"
                    android:textColor="@drawable/radiobutton_textcolor" />

                <RadioButton
                    android:id="@+id/buttonclose"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="Close"
                    android:textColor="@drawable/radiobutton_textcolor" />
            </RadioGroup>

            <ListView
                android:id="@+id/homelist1"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:cacheColorHint="#00000000"
                android:divider="@null"
                android:dividerHeight="15dp" />

...
