<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.psyyf2.dissertation.activity.BaseActivity">


    <LinearLayout
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerClass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:entries="@array/Class" />

            <Spinner
                android:id="@+id/spinnerGroup"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/day1"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:drawableRight="@drawable/ic_today"

            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/hometitle1"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_edittext"
            android:hint="Please Enter Homework Title"
            android:inputType=""
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/homedescription1"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_edittext"
            android:hint="Please input the homework"
            android:inputType=""
            android:textAlignment="viewStart"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSure"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Add" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_color"
                android:text="Cancel" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
