<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/gradedate"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:drawableRight="@drawable/ic_today"
                android:inputType="date" />

            <RadioGroup
                android:id="@+id/RadioGrade"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buttonall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="All"
                    android:textColor="@drawable/radiobutton_textcolor" />

                <RadioButton
                    android:id="@+id/buttonre"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="Released"
                    android:textColor="@drawable/radiobutton_textcolor" />

                <RadioButton
                    android:id="@+id/buttonno"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radiobutton_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="Not Released"
                    android:textColor="@drawable/radiobutton_textcolor" />
            </RadioGroup>

            <ListView
                android:id="@+id/gradelist1"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                android:cacheColorHint="#00000000"
                android:divider="@null"

                android:dividerHeight="15dp">

            </ListView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

