...
                app:tabIndicatorHeight="1dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/slategrey"
                app:tabTextColor="@color/ivory" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

...
